2006-08-13  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/dnd/DnDTest.java:
	(MouseThread.run): Reformatted and set unsuccessful
	field to true in catch-block.

2006-08-15  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/java/util/Vector/removeAll.java: New test.
	* gnu/testlet/java/util/Vector/retainAll.java: New test.

2006-08-13  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/dnd/DnDTest.java:
	Added more fields
	(test): Added more checks.
	(actionPerformed): Set appropriate field to true;
	(dragExit): Likewise.
	(dropActionChanged): Likewise.
	(dragExit): Likewise.
	(dropActionChanged): Likewise.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/TestOfPR28678.java (FakeProvider): Added
	a CertStore mapping.
	(testCertStore): New method.
	(test): Call method above.

2006-08-13  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/TestOfPR28678.java: New test.

2006-08-11  Francis Kung  <fkung@redhat.com>

	* gnu/testlet/java/awt/image/AffineTransformOp/createCompatibleDestImage.java
	(colorModelTest): New method.
	(simpleTest): New method.
	(test): Added more tests and split into two methods.
	* gnu/testlet/java/awt/image/AffineTransformOp/createCompatibleDestRaster.java:
	New file.
	* gnu/testlet/java/awt/image/AffineTransformOp/filterImage.java
	(test): Removed a bad test.
	(testDefaults): Added more tests.
	(testTransform): Removed.
	* gnu/testlet/java/awt/image/AffineTransformOp/filterRaster.java
	(test): Removed a bad test.
	(testDefaults): Added more tests.
	(testTransform): Removed.
	* gnu/testlet/java/awt/image/AffineTransformOp/getPoint2D.java
	(testIdentity): Added more tests.
	* gnu/testlet/java/awt/image/BandCombineOp/constructors.java
	(basicTest): New method.
	(emptyMatrix): New method.
	(invalidMatrix): New method.
	(test): Added more tests and split into multiple methods.
	* gnu/testlet/java/awt/image/BandCombineOp/createCompatibleDestRaster.java: