@@ -1,5 +1,10 @@
 2006-08-13  Lillian Angel  <langel@redhat.com>
 
+	* gnu/testlet/java/awt/dnd/DropTargetDragEvent/Constructors.java:
+	New Test.
+
+2006-08-13  Lillian Angel  <langel@redhat.com>
+
 	* gnu/testlet/java/awt/dnd/DnDTest.java:
 	(MouseThread.run): Reformatted and set unsuccessful
 	field to true in catch-block.
